canary-release/ingress/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-stable
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demo.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-v1
                port:
                  number: 80
